--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 body {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid green;
+    margin: 0 auto;
 }
