--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 #container {
     width: 70%;
     padding: 0;
-    text-align: left;
+    text-align: center;
     border: 1px solid #DDD;
     margin: 0 auto;
 } 
