--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,14 @@ body {
     width: 70%;
     padding: 0;
     text-align: center;
-    border: 1px solid #DDD;
+    border: 1px solid #3b2222;
     margin: 0 auto;
 } 
 
 #cabecera {
     background: #33A;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
-    color: white;
+    color: rgb(233, 203, 203);
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
