--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ body {
 } 
 
 #cabecera {
-    background: #33A;
+    background: rgb(0, 0, 68);
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
-    color: white;
+    color: rgb(12, 8, 8);
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
