--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,24 @@ body {
 #container {
     width: 70%;
     padding: 0;
-    text-align: center;
-    border: 1px solid #3b2222;
+    text-align: left;
+    border: 1px solid #DDD;
     margin: 0 auto;
 } 
 
 #cabecera {
-    background: rgb(0, 0, 68);
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
-    color: rgb(233, 203, 203);
+    color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -29,4 +35,12 @@ body {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
